--- a/pages/templates/aespa.html
+++ b/pages/templates/aespa.html
@@ -3,10 +3,10 @@
         <nav id="topMenu" >
             <!-- <div id="conatainer_right" > -->
                 <ul>
-                    <li><a class="menuLink" onclick="niningnining()" >닝닝</a></li>
-                    <li><a class="menuLink"onclick="giselle()">지젤</a></li>
-                    <li><a class="menuLink"onclick="winter()">윈터</a></li>
-                    <li><a class="menuLink" onclick="karina()">카리나</a></li>
+                    <li><a class="menuLink" onclick="checkHash('#niningnining')" >닝닝</a></li>
+                    <li><a class="menuLink"onclick="checkHash('#giselle')">지젤</a></li>
+                    <li><a class="menuLink"onclick="checkHash('#winter')">윈터</a></li>
+                    <li><a class="menuLink" onclick="checkHash('#karina')">카리나</a></li>
                 </ul>
             <!-- </div> -->
         </nav>
